syntax = "proto3";
option java_multiple_files = true;
package health.safe.api.opencdx.grpc.unit.test;

import "google/protobuf/wrappers.proto";

// This proto is for use in unit testing gRPC Services and messages through out
// the OpenCDx project.
service UnitTest {
  // Used to Sends a greeting. TestB rpc takes UnitTestRequest as a input and return UnitTestResponse message.
  rpc TestA (UnitTestRequest) returns (UnitTestResponse) {}
  // Used to Sends a greeting. TestB rpc takes UnitTestRequest as a input and return UnitTestResponse message.
  rpc TestB (UnitTestRequest) returns (UnitTestResponse) {}
  // Used to Sends a greeting. TestB rpc takes UnitTestRequest as a input and return UnitTestResponse message.
  rpc TestC (UnitTestRequest) returns (UnitTestResponse) {}
  // Used to Sends a greeting. TestB rpc takes UnitTestRequest as a input and return UnitTestResponse message.
  rpc TestD (UnitTestRequest) returns (UnitTestResponse) {}
}

// The request message containing the user's name.
message UnitTestRequest {
  // This is the description of message attribute of the UnitTestRequest message.
  string message = 1;
}

// The response message containing the greetings
message UnitTestResponse {
  // This is the description of message attribute of the UnitTestResponse message.
  string message = 1;
}